Fixed rotating text on IE

--- a/assets/stylesheets/desktop/search.scss
+++ b/assets/stylesheets/desktop/search.scss
@@ -101,6 +101,9 @@ header {
         .no-results {
           padding: 10px 0 0 0;
         }
+        .spinner, .no-results {
+          animation: none;
+        }
       }
       .searching {
         top: 4px;
